<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_u3_t1_initial_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_elements"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="141dp" />

    <Button
        android:id="@+id/buttonIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_one_element"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="214dp" />

    <Button
        android:id="@+id/buttonDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease_one_element"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_elements"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="563dp" />

    <Button
        android:id="@+id/button2Increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_two_elements"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="290dp" />

    <Button
        android:id="@+id/button2Decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease_two_elements"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="443dp" />


</androidx.constraintlayout.widget.ConstraintLayout>